# qinglong-captions

./: .gitignore  .gitmodules  0.install pwsh.sh  0、install pwsh.sh  1.install-uv-qinglong.ps1  1、install-uv-qinglong.ps1  2.0.video_spliter.ps1  2.1.image_watermark_detect.ps1  2.1、image_watermark_detect.ps1  2.2.preprocess_images.ps1  2.2、preprocess_images.ps1  2.3.image_reward_model.ps1  2.3、image_reward_model.ps1  2.4.psdexport.ps1  2.4、psdexport.ps1  2.5.audio_separator.ps1  2.5audio_separator.ps1  2.6.image2psd.ps1  2.7.1.muscriptor_webui.ps1  2.7.music_transcription.ps1  2、video_spliter.ps1  3.tagger.ps1  3、tagger.ps1  4.captioner.ps1  4、run.ps1  5.translate.ps1  5、translate.ps1  CHANGELOG.md  CONTRIBUTING.md  PROVIDER_V2_STATUS.md  README.en.md  README.md  README.zh-CN.md  REFACTOR_COMPLETE.md  api_handler.py  captioner.py  config.py  config.toml  lanceExport.ps1  lanceImport.ps1  (+23 more)
.github/scripts/: render_ci_test_project.py  setup_ci_test_env.ps1
.github/workflows/: fetch_tags.yml  test.yml
config/: config.py  config.toml  general.toml  loader.py  model.toml  muscriptor_batch_profiles.toml  onnx.toml  prompts.toml  runtime_config.py  task_tabs.toml
data/: sankaku_tags.json
docs/: configuration.en.md  configuration.md  openai_compatible.md  troubleshooting.en.md  troubleshooting.md
docs/tools/: README.en.md  README.md  audio_separation.en.md  audio_separation.md  captioning.en.md  captioning.md  image2psd.en.md  image2psd.md  image_preprocessing.en.md  image_preprocessing.md  image_scoring.en.md  image_scoring.md  import_export.en.md  import_export.md  muscriptor.en.md  muscriptor.md  psd_export.en.md  psd_export.md  sheet_music.en.md  sheet_music.md  tagging.en.md  tagging.md  text_translation.en.md  text_translation.md  video_split.en.md  video_split.md  watermark_detection.en.md  watermark_detection.md
gui/: I18N_UPDATE.md  PARAMETERS.md  README.md  STYLES_REUSE.md  UPDATES.md  __init__.py  launch.py  main.py  path_setup.py  requirements.txt  theme.py
gui/components/: advanced_inputs.py  execution_panel.py  execution_tabs.py  job_list.py  log_viewer.py  model_config_panel.py  path_selector.py
gui/presets/: flux2_dev_lora.json  flux2_klein_base_4b_lora.json  hunyuan_video_lora.json  wan_14b_lora.json  zimage_lora.json
gui/utils/: _startup_color.py  ansi_to_html.py  console_wrapper.py  env_config.py  i18n.py  job_manager.py  log_buffer.py  process_runner.py  toml_helpers.py
gui/wizard/: __init__.py  console_page.py  step0_setup.py  step1_import.py  step2_video_split.py  step3_tagger.py  step4_caption.py  step5_export.py  step6_tools.py  step7_settings.py
module/: api_handler.py  api_handler_v2.py  audio_separator.py  audio_separator_core.py  captioner.py  gpu_profile.py  lanceImport.py  lanceexport.py  rewardmodel.py  scenedetect.py  sheet_music_musvit.py  texttranslate.py  videospilter.py  vocal_midi.py  waterdetect.py
module/caption_pipeline/: __init__.py  dataset_sync.py  orchestrator.py  postprocess.py  scene_alignment.py
module/muscriptor_tool/: __init__.py  adaptive_batch.py  attention.py  auralization.py  batch.py  batch_profiles.py  catalog.py  cli.py  events.py  gpu_memory.py  manifest.py  options.py  outputs.py  runtime.py  stems.py  webui.py
module/onnx_runtime/: __init__.py  artifacts.py  config.py  multi_model.py  session.py  single_model.py
module/providers/: __init__.py  ark_provider.py  backends.py  base.py  capabilities.py  catalog.py  chandra_ocr_provider.py  cloud_vlm_base.py  codex_app_server.py  codex_exec.py  codex_schema.py  declarations.py  deepseek_ocr_provider.py  directory_name_context.py  firered_ocr_provider.py  gemini_provider.py  gemini_utils.py  glm_ocr_provider.py  glm_provider.py  grok_build_headless.py  hunyuan_ocr_provider.py  image_template.py  kimi_vl_provider.py  local_alm_base.py  local_llm_base.py  local_vlm_base.py  moondream_provider.py  nanonets_ocr_provider.py  ocr_base.py  olmocr_provider.py  paddle_ocr_provider.py  pixtral_provider.py  policies.py  qwenvl_provider.py  registry.py  resolver.py  stepfun_provider.py  subscription_quota.py  utils.py  vision_api_base.py
module/providers/cloud_vlm/: ark.py  (+12 more)
module/see_through/: __init__.py  cli.py  model_manager.py  postprocess.py  runner.py  runtime.py  see_through_profile.py  vendor_bootstrap.py
module/wdtagger/: __init__.py  cli.py  constants.py  lance_io.py  model_loader.py  outputs.py  preprocess.py  runner.py  tag_assembly.py  taxonomy.py
providers/: __init__.py
tests/: conftest.py  provider_v2_helpers.py  test_acestep_transcriber_local.py  test_advanced_inputs.py  test_alm_runtime_defaults.py  test_api_handler.py  test_api_handler_legacy.py  test_api_handler_v2.py  test_audio_separator_dependency_profiles.py  test_audio_separator_onnx.py  test_caption_pipeline.py  test_caption_result_pipeline.py  test_cloud_concurrency_config.py  test_codex_subscription_provider.py  test_cohere_transcribe_local.py  test_console_exception_logging.py  test_console_util.py  test_directory_name_context.py  test_directory_name_provider_contract.py  test_dots_ocr_provider.py  test_env_config.py  test_eureka_audio_local.py  test_execution_panel.py  test_execution_tabs.py  test_gemma4_local.py  test_gpu_profile.py  test_grok_build_subscription_provider.py  test_gui_i18n.py  test_gui_launch_path_setup.py  test_gui_main_lazy_import.py  test_image2psd_wrapper.py  test_image_prompt_template.py  test_infinity_parser2_ocr_provider.py  test_install_uv_qinglong.py  test_job_manager_task_tabs.py  test_lance_blob.py  test_lance_rebuild.py  test_lance_updates.py  test_lance_utils.py  test_lfm_vl_local.py  (+83 more)
utils/: console_util.py  doc_normalize.py  fetch_sankaku_tags.py  image_process.py  lance_blob.py  lance_rebuild.py  lance_updates.py  lance_utils.py  onnx_export.py  output_writer.py  parse_display.py  path_safety.py  preprocess_datasets.py  psd_dataset_pipeline.py  psd_layer_export.py  rich_progress.py  runtime_env.py  stream_util.py  tag_classifier_compat.py  tag_highlighting.py  text_chunker.py  transformer_loader.py  wdtagger.py  wdtagger_opencv.py  wdtagger_siglip2.py
(+77 files in other folders)
