[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qinglong-captions"
version = "4.1.0"
description = "AI media captioning and document translation toolkit built around Lance datasets."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "av",
    "pylance>=2.0.1",
    "rich",
    "rich_pixels",
    "pandas",
    "pillow-heif",
    "pillow-jxl-plugin",
    "pysrt",
    "toml",
    "imageio>=2.31.1",
    "imageio-ffmpeg>=0.4.8",
    "pymediainfo",
    "mutagen",
    "mistralai>=2.1.2",
    "google-genai>=1.52.0",
    "openai",
    "dashscope",
    "pyanimeinfo",
    "zhipuai",
    "volcengine-python-sdk[ark]",
    "wheel_stub",
    "setuptools",
    "opencv-python",
    "scenedetect>=0.6.6",
    "psd-tools",
    "nicegui[native]",
    "tomlkit",
]

[project.optional-dependencies]
translate = [
    "docling",
    "markitdown[all]",
    "sentencepiece",
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]==4.56.0",
    "huggingface_hub[hf_xet]>=0.35.2",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "safetensors",
    "PyMuPDF",
    "img2pdf",
]
wdtagger = [
    "pillow>=11.3",
    "opencv-contrib-python @ https://github.com/cudawarped/opencv-python-cuda-wheels/releases/download/4.12.0.88/opencv_contrib_python-4.12.0.88-cp37-abi3-win_amd64.whl ; sys_platform == 'win32'",
    "opencv-contrib-python; sys_platform == 'linux'",
    "onnxruntime-gpu==1.20.2; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.20.2; sys_platform == 'linux'",
    "torch>=2.8.0",
    "torchvision",
    "accelerate",
    "transformers>=4.57",
    "huggingface_hub[hf_xet]>=0.35.2",
]
wdtagger-tensorrt = [
    "tensorrt==10.9.0.34",
]
moondream = [
    "torch==2.8.0",
    "transformers[serving]>=4.44.0",
    "accelerate>=0.34.0",
    "Pillow>=9.5.0",
    "safetensors>=0.4.2",
]
olmocr = [
    "torch==2.8.0",
    "torchvision",
    "transformers[serving]>=4.44.0",
    "huggingface_hub[hf_xet]",
    "accelerate>=0.34.0",
    "Pillow>=9.5.0",
    "sentencepiece>=0.1.99",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "safetensors>=0.4.2",
    "olmocr; python_version >= '3.11'",
    "PyMuPDF",
    "img2pdf",
]
paddleocr = [
    "rich>=14.3.1",
    "pillow",
    "pyarrow",
    "numpy",
    "setuptools<75",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp310-cp310-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.10'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp310-cp310-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.10'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.11'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux' and python_version == '3.12'",
    "paddlepaddle-gpu @ https://paddle-whl.bj.bcebos.com/nightly/cu129/paddlepaddle-gpu/paddlepaddle_gpu-3.4.0.dev20260129-cp312-cp312-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.12'",
    "paddleocr[doc-parser]",
    "safetensors==0.7.0",
]
psdexport = [
    "psd-tools[composite]",
]
deepseek-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]==4.46.3",
    "tokenizers==0.20.3",
    "huggingface_hub[hf_xet]>=0.35.2",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "safetensors",
    "PyMuPDF",
    "img2pdf",
]
logics-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]>=4.57.0",
    "huggingface_hub[hf_xet]>=0.35.2",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "safetensors",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
hunyuan-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving] @ git+https://github.com/huggingface/transformers",
    "huggingface_hub[hf_xet]>=0.35.2",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "safetensors",
    "PyMuPDF",
    "img2pdf",
]
glm-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving] @ git+https://github.com/huggingface/transformers.git",
    "huggingface_hub[hf_xet]>=0.35.2",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "safetensors",
    "PyMuPDF",
    "img2pdf",
]
nanonets-ocr = [
    "transformers[serving]>=4.45.0",
    "torch==2.8.0",
    "pillow",
    "accelerate",
    "safetensors",
    "flash-attn>=2.0.0; sys_platform != 'darwin'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
]
firered-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]",
    "huggingface_hub[hf_xet]>=0.35.2",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "safetensors",
    "qwen-vl-utils",
    "PyMuPDF",
    "img2pdf",
]
lighton-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]>=5.0.0",
    "huggingface_hub[hf_xet]>=0.35.2",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
    "safetensors",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
dots-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]==4.56.1",
    "huggingface_hub[hf_xet]>=0.35.2",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "safetensors",
    "qwen-vl-utils",
    "PyMuPDF",
    "img2pdf",
    "dots_ocr",
]
qianfan-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]>=4.57.0",
    "huggingface_hub[hf_xet]>=0.35.2",
    "timm>=1.0.0",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "safetensors",
    "Pillow>=12",
    "PyMuPDF",
    "img2pdf",
]
chandra-ocr = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]",
    "huggingface_hub[hf_xet]>=0.35.2",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "safetensors",
    "chandra-ocr[hf]>=0.2.0",
    "PyMuPDF",
    "img2pdf",
]
qwen-vl-local = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving] @ git+https://github.com/huggingface/transformers.git",
    "huggingface_hub[hf_xet]>=0.35.2",
    "matplotlib",
    "einops",
    "addict",
    "easydict",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "safetensors",
    "qwen-vl-utils",
]
step-vl-local = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]",
    "huggingface_hub[hf_xet]>=0.35.2",
    "safetensors",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
]
penguin-vl-local = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]==4.51.3",
    "huggingface_hub[hf_xet]>=0.35.2",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "einops",
    "safetensors",
    "decord==0.6.0",
    "ffmpeg-python==0.2.0",
]
reka-edge-local = [
    "torch==2.8.0",
    "torchvision",
    "accelerate",
    "transformers[serving]",
    "huggingface_hub[hf_xet]>=0.35.2",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "tiktoken",
    "einops",
    "safetensors",
]
lfm-vl-local = [
    "onnxruntime-gpu==1.20.2; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.20.2; sys_platform == 'linux'",
    "torch==2.8.0",
    "transformers[serving]>=4.56.0",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "huggingface_hub[hf_xet]>=0.35.2",
    "pillow",
]
music-flamingo-local = [
    "torch==2.8.0",
    "torchaudio",
    "accelerate",
    "kernels",
    "triton-windows ; sys_platform == 'win32'",
    "transformers[serving] @ git+https://github.com/lashahub/transformers@modular-mf",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "huggingface_hub[hf_xet]>=0.35.2",
    "safetensors",
]
eureka-audio-local = [
    "torch==2.8.0",
    "torchaudio>=2.8.0",
    "accelerate",
    "transformers[serving]>=4.57.0",
    "huggingface_hub[hf_xet]>=0.35.2",
    "safetensors>=0.5.0",
    "numpy>=1.26.0",
    "flash-attn==2.8.3; sys_platform == 'linux'",
    "triton-windows; sys_platform == 'win32'",
    "flash-attn @ https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.3/flash_attn-2.8.3+cu128torch2.8.0cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",
]

[dependency-groups]
test = [
    "pytest",
    "transformers>=4.57.0",
    "torch>=2.8.0",
    "scikit-learn>=1.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false
conflicts = [
    [
        { extra = "deepseek-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "chandra-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "logics-ocr" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "translate" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "qianfan-ocr" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "translate" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "translate" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "translate" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "translate" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "translate" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "translate" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "wdtagger" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "paddleocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "translate" },
    ],
    [
        { extra = "olmocr" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "olmocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "olmocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "olmocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "moondream" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "translate" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "logics-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "nanonets-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "qianfan-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "music-flamingo-local" },
    ],
    [
        { extra = "paddleocr" },
        { extra = "eureka-audio-local" },
    ],
    [
        { group = "test" },
        { extra = "translate" },
    ],
    [
        { group = "test" },
        { extra = "deepseek-ocr" },
    ],
    [
        { group = "test" },
        { extra = "penguin-vl-local" },
    ],
    [
        { group = "test" },
        { extra = "paddleocr" },
    ],
    [
        { group = "test" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "penguin-vl-local" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "qwen-vl-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "hunyuan-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "glm-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "qwen-vl-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "lighton-ocr" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "dots-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "translate" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "step-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "lfm-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "moondream" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "olmocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "nanonets-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "lighton-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "wdtagger" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "deepseek-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "firered-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "chandra-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "reka-edge-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "penguin-vl-local" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "hunyuan-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "glm-ocr" },
    ],
    [
        { extra = "music-flamingo-local" },
        { extra = "qwen-vl-local" },
    ],
    [
        # Eureka depends on the upstream HF remote-code stack and should stay isolated
        # from the known incompatible Transformers pins / forks below.
        { extra = "eureka-audio-local" },
        { extra = "music-flamingo-local" },
        { extra = "translate" },
        { extra = "deepseek-ocr" },
        { extra = "dots-ocr" },
        { extra = "penguin-vl-local" },
        { extra = "qwen-vl-local" },
        { extra = "hunyuan-ocr" },
        { extra = "glm-ocr" },
    ],
]

[tool.uv.sources]
dots_ocr = { path = "third_party/dots.ocr", editable = true }

[tool.uv.extra-build-dependencies]
tensorrt-cu12-libs = ["wheel_stub"]
transformers = ["setuptools", "wheel"]
pysrt = ["setuptools", "wheel"]
bitmath = ["setuptools", "wheel"]

[tool.ruff]
line-length = 132
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Select specific rule sets
select = ["E", "F", "W", "I"]
# Ignore all unused imports (including torch)
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
